# SEU-KIDSIZE-ROS

./: README.md
docs/: params.md  todo.md  usage.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  package.xml
src/common/include/common/: common.hpp  datadef.hpp
src/common/msg/: BodyAngles.msg  BodyTask.msg  GcInfo.msg  HeadAngles.msg  HeadTask.msg  ImageResult.msg  ImuData.msg  LedTask.msg  PlayerInfo.msg
src/common/srv/: AddAngles.srv  GetActions.srv  GetAngles.srv  ImageSnap.srv  SetInt.srv
src/config/: CMakeLists.txt  package.xml
src/config/conf/: config.conf
src/config/conf/action/: action2.conf  motion2.conf  offset2.conf  walk2.conf
src/config/conf/hardware/: hardware.conf
src/config/conf/model/: field.conf  robot.conf
src/config/conf/vision/: MV-UB131GC-Group0.config  bkrobocup.cfg  params.conf  vision.conf
src/config/include/config/: basic_parser.hpp
src/config/src/: basic_parser.cpp
src/control/: CMakeLists.txt  package.xml
src/control/scripts/: main.py
src/control/src/: main.cpp  observer.cpp
src/gamectrl/: CMakeLists.txt  package.xml
src/gamectrl/src/: gctrl.cpp  gctrl.hpp  main.cpp
src/gamectrl/src/gcdata/: RoboCupGameControlData.h
src/libraries/darknet/: CMakeLists.txt  package.xml
src/libraries/darknet/src/: activation_kernels.cu  activation_layer.c  activations.c  avgpool_layer.c  avgpool_layer_kernels.cu  batchnorm_layer.c  blas.c  blas_kernels.cu  box.c  col2im.c  col2im_kernels.cu  connected_layer.c  conv_lstm_layer.c  convolutional_kernels.cu  convolutional_layer.c  cost_layer.c  cpu_gemm.c  crnn_layer.c  crop_layer.c  crop_layer_kernels.cu  dark_cuda.c  darknet.c  data.c  deconvolutional_kernels.cu  deconvolutional_layer.c  detection_layer.c  dropout_layer.c  dropout_layer_kernels.cu  gemm.c  gru_layer.c  http_stream.cpp  im2col.c  im2col_kernels.cu  image.c  image_opencv.cpp  layer.c  list.c  local_layer.c  lstm_layer.c  matrix.c  (+19 more)
src/libraries/robot/: CMakeLists.txt  package.xml
src/libraries/robot/src/: action_engine.cpp  robot.cpp
src/libraries/seuimage/: CMakeLists.txt  package.xml
src/libraries/seuimage/src/: fielddetect.cpp  fitline.cpp  ransac.cpp  seuimage.cpp  seuimage.cu
src/libraries/seumath/: CMakeLists.txt  package.xml
src/motion/: CMakeLists.txt  package.xml
src/motion/launch/: motion.launch
src/motion/src/: motion.cpp
src/motion/src/motor/: class_exception.hpp  logger.hpp  motor.cpp  motor.hpp  timer.hpp
src/motion/src/scan/: ScanEngine.cpp  ScanEngine.hpp
src/motion/src/walk/: HumanoidModel.hpp  IKWalk.cpp  SmoothSpline.cpp  SmoothSpline.hpp  WalkEngine.cpp  WalkEngine.hpp
src/player/: CMakeLists.txt  package.xml
src/player/launch/: player.launch
src/player/src/: player.cpp
src/player/src/gpio/: gpio.cpp  gpio.hpp
src/player/src/imu/: imu.cpp  imu.hpp
src/start/: CMakeLists.txt  package.xml  start.md
src/start/launch/: start_action_debug_robot.launch  start_action_debug_simulation.launch  start_debug_server.launch  start_robot.launch  start_robot_remote.launch  start_simulation.launch  start_simulation_remote.launch  start_without_vision_robot.launch  start_without_vision_simulation.launch  update_params.launch
src/start/src/: params_update.cpp
src/tools/action/: CMakeLists.txt  package.xml
src/tools/debuger/: CMakeLists.txt  package.xml
src/tools/easy_start/: CMakeLists.txt  package.xml
src/tools/image/: CMakeLists.txt  package.xml
src/tools/image/src/: ImageLabel.cpp  ImageLabel.hpp  image_debuger.cpp  image_debuger.hpp  main.cpp
src/tools/simulation/: CMakeLists.txt  package.xml
src/tools/team_monitor/: CMakeLists.txt  package.xml
src/vision/: CMakeLists.txt  package.xml
src/vision/launch/: sim_vision.launch  vision.launch
src/vision/src/: SimVision.cpp  Vision.cpp
(+115 files in other folders)
